--- a/resources/angular-views/movements/explorer/partials/details-layout.html
+++ b/resources/angular-views/movements/explorer/partials/details-layout.html
@@ -25,7 +25,7 @@
     </div>
 
     <!-- Parent folder -->
-    <div ng-show="parentFolder" class="row">
+    <div ng-if="parentFolder" class="row">
 
         <!-- Title -->
         <div class="col-xs-10 col-xs-offset-2 col-md-11 col-md-offset-1">
