--- a/resources/angular-views/movements/explorer/partials/large-tiles-layout.html
+++ b/resources/angular-views/movements/explorer/partials/large-tiles-layout.html
@@ -4,7 +4,7 @@
 <div class="row">
 
     <!-- Parent folder -->
-    <div ng-show="parentFolder" class="col-xs-6 col-md-4 col-lg-3">
+    <div ng-if="parentFolder" class="col-xs-6 col-md-4 col-lg-3">
         <a href="{{ parentFolder.href }}" class="folder">
             <i class="fa fa-hand-o-left fa-3x"></i>
             <span class="name">
@@ -14,7 +14,7 @@
     </div>
 
     <!-- Other folders -->
-    <div ng-repeat="folder in folders track by id" class="col-xs-6 col-md-4 col-lg-3">
+    <div ng-repeat="folder in folders track by $index" class="col-xs-6 col-md-4 col-lg-3">
         <a href="{{ folder.href }}" class="folder">
             <i class="fa fa-folder-open fa-3x"></i>
             <span class="name">
@@ -24,7 +24,7 @@
     </div>
 
     <!-- Movements -->
-    <div ng-repeat="file in files track by id" class="col-xs-6 col-md-4 col-lg-3">
+    <div ng-repeat="movement in movements track by movement.id" class="col-xs-6 col-md-4 col-lg-3">
         <div class="aspect-ratio aspect-4-3 active-element text-center">
             <div>
 
@@ -34,14 +34,14 @@
                 <div class="tools text-left">
 
                     <!-- Movement date -->
-                    <span style="color: #aaa">
-                        {{ file.createdAt | mysqlDate : 'MMMM d, h:mma' }}
+                    <span>
+                        {{ movement.createdAt | mysqlDate : 'MMMM d, h:mma' }}
                     </span>
                     <br>
 
                     <!-- Movement title -->
-                    <span style="color: #999">
-                        {{ file.title | characters:25 }}
+                    <span>
+                        {{ movement.title | characters:25 }}
                     </span>
 
                     <!-- Movement actions -->
@@ -65,22 +65,29 @@
                                 </li>
                                 <li>
                                     <a
-                                        ng-click="shareMovement(file)"
+                                        ng-click="selectThumbnail(movement)"
                                         href="javascript:;">
-                                        Share
+                                        Choose Thumbnail
                                     </a>
                                 </li>
                                 <li>
                                     <a
-                                        ng-click="editMovement(file)"
+                                        ng-click="editMovement(movement)"
                                         href="javascript:;">
                                         Edit
+                                    </a>
+                                </li>
+                                <li>
+                                    <a
+                                        ng-click="shareMovement(movement)"
+                                        href="javascript:;">
+                                        Share
                                     </a>
                                 </li>
                                 <li role="separator" class="divider"></li>
                                 <li>
                                     <a
-                                        ng-click="deleteMovement(file)"
+                                        ng-click="deleteResource('movement', movement)"
                                         href="javascript:;">
                                         Delete
                                     </a>
@@ -95,7 +102,7 @@
 
     <!-- No movements or folders to show -->
     <div
-        ng-if="folders.length + files.length === 0"
+        ng-if="folders.length + movements.length === 0"
         class="col-xs-6 col-md-8 col-lg-9"
         style="margin-top: 35px">
 
