--- a/resources/angular-views/movements/explorer/partials/small-tiles-layout.html
+++ b/resources/angular-views/movements/explorer/partials/small-tiles-layout.html
@@ -4,7 +4,7 @@
 <div class="row">
 
     <!-- Parent folder -->
-    <div ng-show="parentFolder" class="col-xs-4 col-md-3 col-lg-1">
+    <div ng-if="parentFolder" class="col-xs-4 col-md-3 col-lg-1">
         <a href="{{ parentFolder.href }}" class="folder">
             <i class="fa fa-hand-o-left fa-2x"></i>
             <span class="name">
@@ -14,28 +14,28 @@
     </div>
 
     <!-- Other folders -->
-    <div ng-repeat="folder in folders" class="col-xs-4 col-md-3 col-lg-1">
-        <a href="{{ folder.href }}" class="folder">
+    <div ng-repeat="folder in folders track by $index" class="col-xs-4 col-md-3 col-lg-1">
+        <a href="{{ ::folder.href }}" class="folder">
             <i class="fa fa-folder-open fa-2x"></i>
             <span class="name">
-                {{ folder.name | characters:20 }}
+                {{ ::folder.name | characters:20 }}
             </span>
         </a>
     </div>
 
     <!-- Movements -->
-    <div ng-repeat="movement in movements" class="col-xs-4 col-md-3 col-lg-1">
-        <span class="file">
+    <div ng-repeat="movement in movements track by movement.id" class="col-xs-4 col-md-3 col-lg-1">
+        <span class="file" title="{{ ::movement.title }}">
             <i class="fa fa-files-o fa-2x"></i>
             <span class="name">
-                {{ movement.title | characters:20 }}
+                {{ ::movement.title | characters:10 }}
             </span>
         </span>
     </div>
 
     <!-- No movements or folders to show -->
     <div
-        ng-show="folders.length === 0 && movements.length === 0"
+        ng-if="folders.length + movements.length === 0"
         class="col-xs-8 col-md-9 col-lg-11 text-center">
 
         <h3>There are no movements to display.</h3>
