--- a/resources/assets/sass/directives/ui-movement.scss
+++ b/resources/assets/sass/directives/ui-movement.scss
@@ -6,7 +6,7 @@
  */
 
 .ui-movement-container {
-    background-color: #fff;
+    background-color: $blue;
     @include box-shadow(1px 1px 2px rgba(0, 0, 0, 0.2));
 }
 .ui-movement-container.four-three-aspect-ratio {
