--- a/resources/assets/sass/partials/_containers.scss
+++ b/resources/assets/sass/partials/_containers.scss
@@ -50,7 +50,7 @@
 .active-element {
     position: relative;
     display: inline-block;
-    background-color: #fff;
+    background-color: $blue;
     @include box-shadow(1px 1px 2px rgba(0, 0, 0, 0.2));
 }
 .active-element .tools {
@@ -58,7 +58,7 @@
     bottom: 0;
     height: 60px;
     width: 100%;
-    background-color: #f5f5f5;
+    background-color: $text-color-blue;
 }
 .active-element .tools span {
     display: inline-block;
