Integrated folder create/delete methods

--- a/resources/angular-views/movements/explorer/partials/large-tiles-layout.html
+++ b/resources/angular-views/movements/explorer/partials/large-tiles-layout.html
@@ -40,7 +40,7 @@
                     <br>
 
                     <!-- Movement title -->
-                    <span>
+                    <span title="{{ movement.title }}">
                         {{ movement.title | characters:25 }}
                     </span>
 
