--- a/resources/assets/sass/partials/_navigation.scss
+++ b/resources/assets/sass/partials/_navigation.scss
@@ -25,6 +25,11 @@
 .dropdown-menu {
     @include box-shadow(none);
     @include border-radius(0px);
+
+    .form-control {
+        background-color: transparent;
+        color: #333;
+    }
 }
 
 .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
