Updated to match new API

--- a/resources/angular-views/partials/page-loading.html
+++ b/resources/angular-views/partials/page-loading.html
@@ -2,8 +2,8 @@
 <!-- Copyright Heddoko(TM) 2016, all rights reserved. -->
 
 <div class="row">
-    <div class="col-sm-12 text-center">
-        <h1 class="text-muted" style="margin: 150px auto 75px">Working</h1>
-        <i class="fa fa-spinner fa-spin fa-2x text-muted"></i>
+    <div class="col-sm-12 loading-notice text-muted">
+        <h2>Working</h2>
+        <i class="fa fa-spinner fa-spin fa-2x"></i>
     </div>
 </div>
