--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -30,6 +30,7 @@
 /* Directives */
 @import 'directives/ui-avatar.scss';
 @import 'directives/ui-editable-fields.scss';
+@import 'directives/ui-filesystem.scss';
 @import 'directives/ui-movement.scss';
 @import 'directives/ui-page-title.scss';
 @import 'directives/ui-taggable.scss';
