--- a/resources/angular-views/partials/select-profile.html
+++ b/resources/angular-views/partials/select-profile.html
@@ -13,5 +13,5 @@
     <br>
 
     You can also take this opportunity to
-    <a href="#/profile/create">create one</a>.
+    <a href="#/profiles/create">create one</a>.
 </div>
