--- a/resources/assets/sass/partials/_messages.scss
+++ b/resources/assets/sass/partials/_messages.scss
@@ -249,6 +249,7 @@ button.toast-close-button {
  */
 .loading-notice {
     text-align: center;
+    color: $text-color-blue;
 
     h1, h2, h3 {
         margin: 100px auto 75px;
