Added Rover.waitForFlag helper method

--- a/resources/angular-views/partials/navigation.html
+++ b/resources/angular-views/partials/navigation.html
@@ -67,7 +67,7 @@
         <!-- Profiles -->
 		<li>
             <!-- List of profiles -->
-            <a ng-if="global.data.profile && global.data.profile.length > 0" href="#/profile">
+            <a ng-if="global.data.profile && global.data.profile.length > 0" href="#/profiles">
                 <i class="fa fa-user"></i>
                 <span>Athletes</span>
                 <span class="pull-right">
