--- a/resources/angular-views/directive-partials/ui-filesystem/layouts/small-tiles.html
+++ b/resources/angular-views/directive-partials/ui-filesystem/layouts/small-tiles.html
@@ -24,12 +24,27 @@
     </div>
 
     <!-- Files -->
-    <div ng-repeat="file in files track by $index" class="col-xs-4 col-md-3 col-lg-1">
-        <span class="file" title="{{ ::file.title }}">
-            <i class="fa fa-files-o fa-2x"></i>
-            <span class="name">
-                {{ ::file.title | characters:12 }}
-            </span>
-        </span>
+    <div ng-repeat="file in files track by $index" class="col-sm-6 col-md-4 col-lg-2">
+        <a
+            href="{{ file.href }}"
+            class="aspect-ratio aspect-4-3 card"
+            style="background-image: url({{ file.image || '' }})">
+            <div>
+
+                <!-- File actions -->
+                <div class="data">
+
+                    <!-- Title -->
+                    <span class="title" title="{{ file.title }}">
+                        {{ ::file.title | characters:25 }}
+                    </span>
+
+                    <!-- Sub title -->
+                    <span class="sub-title" ng-if="file.subTitle">
+                        {{ ::file.subTitle | characters:25 }}
+                    </span>
+                </div>
+            </div>
+        </a>
     </div>
 </div>
