--- a/resources/assets/sass/directives/ui-filesystem.scss
+++ b/resources/assets/sass/directives/ui-filesystem.scss
@@ -9,11 +9,11 @@
 .ui-filesystem-container {
 
     .ui-filesystem-toolbar {
-        margin: 5px 0 15px;
+        margin: 0 0 25px;
 
         .ui-filesystem-toolbar-group {
             display: inline-block;
-            margin: 0 10px;
+            margin: 0 4px;
         }
 
         .ui-filesystem-toolbar-btn {
