--- a/resources/assets/sass/partials/_containers.scss
+++ b/resources/assets/sass/partials/_containers.scss
@@ -62,10 +62,14 @@
         width: 100%;
         color: #fff;
         background-color: rgba(44, 58, 70, 0.8);
+        @include transition(height .2s);
+
+        span {
+            line-height: 1em;
+        }
 
         .title {
             display: block;
-            padding: 4px 0 1px 10px;
             text-transform: uppercase;
             font-size: 1.2em;
         }
@@ -74,6 +78,12 @@
             display: block;
             text-transform: uppercase;
             font-size: 0.8em;
+        }
+    }
+
+    &:hover {
+        .data {
+            height: 85%;
         }
     }
 }
