Reorganized directives + added movement directive + worked on FMS UI

--- a/resources/angular-views/partials/directives/ui-movement/preview.html
+++ b/resources/angular-views/partials/directives/ui-movement/preview.html
@@ -1,5 +1,7 @@
 
-<div class="ui-movement-container aspect-ratio aspect-4-3">
+<!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
+
+<div class="ui-movement-card aspect-ratio aspect-4-3">
     <div class="ui-movement-placeholder">
         Movement Preview <br>
         <span style="color: #ccc">
