--- a/resources/assets/sass/partials/_containers.scss
+++ b/resources/assets/sass/partials/_containers.scss
@@ -206,7 +206,7 @@
   border-bottom: 1px solid #E5E5E5;
   border-bottom-color: $blue;
   background: #f4f4f4;
-  background: $blue-dark;
+  background: $dark-blue;
 
   h4{
     margin-bottom:0;
@@ -629,7 +629,7 @@ ul.team{
 
 .breadcrumb-movement>li:first-child>div {
 	background-color: #f4f4f4;
-	background-color: $blue-dark;
+	background-color: $dark-blue;
 	height: 35px;
 	top: 0;
 	left: -5px;
