--- a/resources/assets/sass/partials/_demo.scss
+++ b/resources/assets/sass/partials/_demo.scss
@@ -87,7 +87,7 @@
     }
 
     .demo-movement-li {
-        color: $blue-dark;
+        color: $dark-blue;
 
         &.live {
             background-color: $heddokogreen;
@@ -104,7 +104,7 @@
         bottom: 20px;
 
         a {
-            color: $blue-dark;
+            color: $dark-blue;
             margin: 0 10px;
             display: inline-block;
 
