--- a/resources/angular-views/partials/directives/ui-editable-fields/field-value-generic.html
+++ b/resources/angular-views/partials/directives/ui-editable-fields/field-value-generic.html
@@ -5,10 +5,10 @@
 
     <!-- Displayed value -->
     <a ng-if="!isDisabled" ng-click="edit()" href="javascript:;" class="edit-text">
-        {{ display || model[key] }}
+        {{ display || model[key] || empty }}
     </a>
     <span ng-if="isDisabled">
-        {{ display || model[key] }}
+        {{ display || model[key] || empty }}
     </span>
 
     <!-- Edit icon -->
@@ -18,6 +18,6 @@
 </div>
 
 <div ng-show="state == 'saving'" class="ui-editable-field-value ui-editable-fields-muted">
-    {{ display || model[key] }}
+    {{ display || model[key] || empty }}
     <i class="fa fa-spinner fa-spin fa-fw"></i>
 </div>
