--- a/resources/assets/sass/partials/_general.scss
+++ b/resources/assets/sass/partials/_general.scss
@@ -138,7 +138,7 @@ $text-colors:(
     warning:$warning,
     danger:$danger,
     violet:$info-alt,
-    dark:$blue-dark
+    dark:$dark-blue
 );
 @each $text-class, $text-color in $text-colors {
     .text-#{"" + $text-class} {
@@ -255,7 +255,7 @@ $text-colors:(
     warning:$warning,
     danger:$danger,
     info-alt:$info-alt,
-    dark:$blue-dark
+    dark:$dark-blue
 );
 @each $text-class, $text-color in $text-colors {
     .color-#{$text-class} {
