Worked on FMS UI

--- a/resources/angular-views/partials/directives/ui-movement/playback.html
+++ b/resources/angular-views/partials/directives/ui-movement/playback.html
@@ -1,7 +1,7 @@
 
 <!-- Copyright Heddoko(TM) 2016, all rights reserved. -->
 
-<div class="ui-movement-container">
+<div class="ui-movement-container" ng-style="{height: height}">
 
     <h1 ng-style="{'text-align': titleAlign}">
         <a ng-if="previousMovement" ng-click="previousMovement()" href="javascript:;">
@@ -15,8 +15,8 @@
         </a>
     </h1>
 
-    <div style="display: block; margin: 150px 0; text-align: center" class="text-muted">
-        In Development...
+    <div style="display: block; margin: 50px 0; text-align: center" class="text-muted">
+        <i class="fa fa-cubes fa-fw"></i> In Development...
     </div>
 
     <div class="controls">
