--- a/resources/assets/sass/directives/ui-movement.scss
+++ b/resources/assets/sass/directives/ui-movement.scss
@@ -38,6 +38,7 @@ $controls-size: 60px;
     padding-bottom: $controls-size;
 
     h1 {
+        margin: 20px;
         font-size: 1.2em;
         text-transform: uppercase;
         color: $text-color;
