Working on FMS scoring

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -4,6 +4,7 @@
  */
 
 /* Base */
+// @import '../../../bower_components/compass-mixins/lib/compass/css3/images';
 @import 'partials/_variables.scss';
 @import 'fonts/proxima-nova.scss';
 @import 'partials/_general.scss';
